# insight-link-pro

./: .gitignore  .mcpignore  README.md  main.py  mcp.json  pyproject.toml  requirements.txt
.well-known/mcp/: server-card.json
assets/: architecture.mmd
core/: config.py  context_manager.py  session_store.py
tools/: __init__.py  analysis_tools.py  doc_tools.py  repo_tools.py  session_tools.py
utils/: helpers.py
